Update API version to 2.3
Update the API reference doc also.

JerryScript-DCO-1.0-Signed-off-by: Peter Gal pgal.usz@partner.samsung.com

--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -1910,7 +1910,7 @@ jerry_value_is_proxy (const jerry_value_t value)
 
 **Example**
 
-*New in version [next_version]*.
+*New in version 2.3*.
 
 ```c
 {
@@ -4363,7 +4363,7 @@ jerry_create_proxy (const jerry_value_t target,
 
 **Example**
 
-*New in version [next_version]*.
+*New in version 2.3*.
 
 [doctest]: # ()
 
@@ -4999,6 +4999,7 @@ jerry_has_property (const jerry_value_t obj_val,
   -  true/false API value  - depend on whether the property exists
 
 *Changed in version 2.0*: The return value type is now a JavaScript value and not a primitive boolean value.
+*Changed in version 2.3*: The return value can be an error value.
 
 **Example**
 
@@ -5058,6 +5059,7 @@ jerry_has_own_property (const jerry_value_t obj_val,
   -  true/false API value - depend on whether the property exists
 
 *Changed in version 2.0*: The return value type is now a JavaScript value and not a primitive boolean value.
+*Changed in version 2.3*: The return value can be an error value.
 
 **Example**
 
