--- a/00.GETTING-STARTED.md
+++ b/00.GETTING-STARTED.md
@@ -10,7 +10,7 @@ permalink: /getting-started/
 
 ## Setting up prerequisites
 
-Currently, only Ubuntu 14.04+ is officially supported as primary development environment.
+Currently, only Ubuntu 18.04+ is officially supported as primary development environment.
 
 There are several dependencies, that should be installed manually. The following list is the absolute minimum for building:
 
@@ -61,10 +61,10 @@ tools/build.py --debug --logging=on --error-messages=on --line-info=on
 python tools/build.py --cmake-param=CMAKE_PARAM
 ```
 
-**Set a profile mode (ES5.1, subset of ES2015, minimal)**
+**Set a profile mode (ES.next, ES5.1, minimal)**
 
 ```bash
-python tools/build.py --profile=es5.1|es2015-subset|minimal
+python tools/build.py --profile=es.next|es5.1|minimal
 ```
 
 See also the related [README.md](https://github.com/jerryscript-project/jerryscript/blob/master/jerry-core/profiles/README.md).
