--- a/02.API-REFERENCE.md
+++ b/02.API-REFERENCE.md
@@ -1469,10 +1469,10 @@ jerry_value_is_array (const jerry_value_t value)
 Returns whether the given `jerry_value_t` is an ArrayBuffer object.
 
 *Notes*:
-- This API depends on a build option (`JERRY_ES2015_BUILTIN_TYPEDARRAY`) and can be checked
+- This API depends on a build option (`JERRY_BUILTIN_TYPEDARRAY`) and can be checked
   in runtime with the `JERRY_FEATURE_TYPEDARRAY` feature enum value,
   see: [jerry_is_feature_enabled](#jerry_is_feature_enabled).
-- The ES2015-subset profile enables this by default.
+- The es.next profile enables this by default.
 
 **Prototype**
 
@@ -1594,10 +1594,10 @@ jerry_value_is_constructor (const jerry_value_t value)
 Returns whether the given `jerry_value_t` is a DataView object value.
 
 *Notes*:
-- This API depends on a build option (`JERRY_ES2015_BUILTIN_DATAVIEW`) and can be checked
+- This API depends on a build option (`JERRY_BUILTIN_DATAVIEW`) and can be checked
   in runtime with the `JERRY_FEATURE_DATAVIEW` feature enum value,
   see: [jerry_is_feature_enabled](#jerry_is_feature_enabled).
-- The ES2015-subset profile enables this by default.
+- The es.next profile enables this by default.
 
 **Prototype**
 
@@ -1851,10 +1851,10 @@ jerry_value_is_object (const jerry_value_t value)
 Returns whether the given `jerry_value_t` is a promise value.
 
 *Notes*:
-- This API depends on a build option (`JERRY_ES2015_BUILTIN_PROMISE`) and can be checked
+- This API depends on a build option (`JERRY_BUILTIN_PROMISE`) and can be checked
   in runtime with the `JERRY_FEATURE_PROMISE` feature enum value,
   see: [jerry_is_feature_enabled](#jerry_is_feature_enabled).
-- The ES2015-subset profile enables this by default.
+- The es.next profile enables this by default.
 
 
 **Prototype**
@@ -1900,10 +1900,10 @@ jerry_value_is_promise (const jerry_value_t value)
 Returns whether the given `jerry_value_t` is a proxy value.
 
 *Notes*:
-- This API depends on a build option (`JERRY_ES2015_BUILTIN_PROXY`) and can be checked
+- This API depends on a build option (`JERRY_BUILTIN_PROXY`) and can be checked
   in runtime with the `JERRY_FEATURE_PROXY` feature enum value,
   see: [jerry_is_feature_enabled](#jerry_is_feature_enabled).
-- The ES2015-subset profile enables this by default.
+- The es.next profile enables this by default.
 
 
 **Prototype**
@@ -1920,7 +1920,7 @@ jerry_value_is_proxy (const jerry_value_t value)
 
 **Example**
 
-*New in version [next_version]*.
+*New in version 2.3*.
 
 ```c
 {
@@ -1988,10 +1988,10 @@ jerry_value_is_string (const jerry_value_t value)
 Returns whether the given `jerry_value_t` is a symbol value.
 
 *Notes*:
-- This API depends on a build option (`JERRY_ES2015_BUILTIN_SYMBOL`) and can be checked
+- This API depends on a build option (`JERRY_BUILTIN_SYMBOL`) and can be checked
   in runtime with the `JERRY_FEATURE_SYMBOL` feature enum value,
   see: [jerry_is_feature_enabled](#jerry_is_feature_enabled).
-- The ES2015-subset profile enables this by default.
+- The es.next profile enables this by default.
 
 **Prototype**
 
@@ -2048,10 +2048,10 @@ main (void)
 Checks whether the given `jerry_value_t` is a TypedArray object or not.
 
 *Notes*:
-- This API depends on a build option (`JERRY_ES2015_BUILTIN_TYPEDARRAY`) and can be checked
+- This API depends on a build option (`JERRY_BUILTIN_TYPEDARRAY`) and can be checked
   in runtime with the `JERRY_FEATURE_TYPEDARRAY` feature enum value,
   see: [jerry_is_feature_enabled](#jerry_is_feature_enabled).
-- The ES2015-subset profile enables this by default.
+- The es.next profile enables this by default.
 
 **Prototype**
 
@@ -2106,11 +2106,11 @@ main (void)
 Checks whether the given `jerry_value_t` is the given `jerry_container_type_t` type container object.
 
 *Notes*
-- This API function depends on a build option (`JERRY_ES2015_BUILTIN_CONTAINER`) and can be checked
+- This API function depends on a build option (`JERRY_BUILTIN_CONTAINER`) and can be checked
   runtime with the `JERRY_FEATURE_MAP, JERRY_FEATURE_SET, JERRY_FEATURE_WEAKMAP, JERRY_FEATURE_WEAKSET`
   feature enum values.
   see: [jerry_is_feature_enabled](#jerry_is_feature_enabled).
-- The ES2015-subset profile enables this by default.
+- The es.next profile enables this by default.
 
 *New in version 2.3*.
 
@@ -3386,7 +3386,7 @@ jerry_value_to_string (const jerry_value_t value);
 
 # Functions for promise objects
 
-These APIs all depend on the ES2015-subset profile (or on some build options).
+These APIs all depend on the es.next profile (or on some build options).
 
 ## jerry_get_promise_result
 
@@ -3397,10 +3397,10 @@ The function returns the result of a Promise object.
 *Notes*:
 - Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
   is no longer needed.
-- This API depends on a build option (`JERRY_ES2015_BUILTIN_PROMISE`) and can be checked
+- This API depends on a build option (`JERRY_BUILTIN_PROMISE`) and can be checked
   in runtime with the `JERRY_FEATURE_PROMISE` feature enum value,
   see: [jerry_is_feature_enabled](#jerry_is_feature_enabled).
-- The ES2015-subset profile enables this by default.
+- The es.next profile enables this by default.
 
 
 **Prototype**
@@ -3464,10 +3464,10 @@ example (void)
 *Notes*:
 - Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
   is no longer needed.
-- This API depends on a build option (`JERRY_ES2015_BUILTIN_PROMISE`) and can be checked
+- This API depends on a build option (`JERRY_BUILTIN_PROMISE`) and can be checked
   in runtime with the `JERRY_FEATURE_PROMISE` feature enum value,
   see: [jerry_is_feature_enabled](#jerry_is_feature_enabled).
-- The ES2015-subset profile enables this by default.
+- The es.next profile enables this by default.
 
 
 **Prototype**
@@ -3535,10 +3535,10 @@ Resolve or reject the promise with an argument.
 *Note*:
 - Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
   is no longer needed.
-- This API depends on a build option (`JERRY_ES2015_BUILTIN_PROMISE`) and can be checked
+- This API depends on a build option (`JERRY_BUILTIN_PROMISE`) and can be checked
   in runtime with the `JERRY_FEATURE_PROMISE` feature enum value,
   see: [jerry_is_feature_enabled](#jerry_is_feature_enabled).
-- The ES2015-subset profile enables this by default.
+- The es.next profile enables this by default.
 
 
 **Prototype**
@@ -3592,7 +3592,7 @@ jerry_resolve_or_reject_promise (jerry_value_t promise,
 
 # Functions for symbols
 
-These APIs all depend on the ES2015-subset profile (or on build options).
+These APIs all depend on the es.next profile (or on build options).
 
 ## jerry_get_symbol_descriptive_string
 
@@ -3604,10 +3604,10 @@ Based on ECMA 262 v6 19.4.3.2.1 this is in the form of `Symbol(<description>)`.
 *Notes*:
 - Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
   is no longer needed.
-- This API depends on a build option (`JERRY_ES2015_BUILTIN_SYMBOL`) and can be checked
+- This API depends on a build option (`JERRY_BUILTIN_SYMBOL`) and can be checked
   in runtime with the `JERRY_FEATURE_SYMBOL` feature enum value,
   see: [jerry_is_feature_enabled](#jerry_is_feature_enabled).
-- The ES2015-subset profile enables this by default.
+- The es.next profile enables this by default.
 - If the symbol support is not enabled an error will be returned.
 
 **Prototype**
@@ -3777,7 +3777,7 @@ jerry_create_array (uint32_t size);
 Create a jerry_value_t representing an ArrayBuffer object.
 
 *Note*:
-  - This API depends on the ES2015-subset profile.
+  - This API depends on the es.next profile.
   - Returned value must be freed with [jerry_release_value](#jerry_release_value)
     when it is no longer needed.
 
@@ -3825,7 +3825,7 @@ After the object is not needed the GC will call the `free_cb`
 so the user can release the buffer which was provided.
 
 *Note*:
-  - This API depends on the ES2015-subset profile.
+  - This API depends on the es.next profile.
   - Returned value must be freed with [jerry_release_value](#jerry_release_value)
     when it is no longer needed.
 
@@ -3998,7 +3998,7 @@ jerry_create_error_sz (jerry_error_t error_type,
 Create new JavaScript DataView object.
 
 *Note*:
-  - This API depends on the ES2015-subset profile.
+  - This API depends on the es.next profile.
   - Returned value must be freed with [jerry_release_value](#jerry_release_value)
     when it is no longer needed.
 
@@ -4314,7 +4314,7 @@ Create an empty promise object which can be resolved or rejected later
 by calling jerry_resolve_or_reject_promise.
 
 *Note*:
-  - This API depends on the ES2015-subset profile.
+  - This API depends on the es.next profile.
   - Returned value must be freed with [jerry_release_value](#jerry_release_value)
     when it is no longer needed.
 
@@ -4354,7 +4354,7 @@ jerry_create_promise (void)
 Create a new Proxy object with the given target and handler.
 
 *Note*:
-  - This API depends on the ES2015-subset profile.
+  - This API depends on the es.next profile.
   - Returned value must be freed with [jerry_release_value](#jerry_release_value)
     when it is no longer needed.
 
@@ -4373,7 +4373,7 @@ jerry_create_proxy (const jerry_value_t target,
 
 **Example**
 
-*New in version [next_version]*.
+*New in version 2.3*.
 
 [doctest]: # ()
 
@@ -4582,7 +4582,7 @@ Create symbol from an API value.
 
 *Note*:
   - The given argument is converted to string. This operation can throw an error.
-  - This API depends on the ES2015-subset profile.
+  - This API depends on the es.next profile.
   - Returned value must be freed with [jerry_release_value](#jerry_release_value)
     when it is no longer needed.
 
@@ -4724,10 +4724,10 @@ and element count can be specified.
 *Notes*:
 - Returned value must be freed with [jerry_release_value](#jerry_release_value)
   when it is no longer needed.
-- This API depends on a build option (`JERRY_ES2015_BUILTIN_TYPEDARRAY`) and can be checked
+- This API depends on a build option (`JERRY_BUILTIN_TYPEDARRAY`) and can be checked
   in runtime with the `JERRY_FEATURE_TYPEDARRAY` feature enum value,
   see: [jerry_is_feature_enabled](#jerry_is_feature_enabled).
-- The ES2015-subset profile enables this by default.
+- The es.next profile enables this by default.
 
 **Prototype**
 
@@ -4780,10 +4780,10 @@ one of the allowed TypedArray functions.
 *Notes*:
 - Returned value must be freed with [jerry_release_value](#jerry_release_value)
   when it is no longer needed.
-- This API depends on a build option (`JERRY_ES2015_BUILTIN_TYPEDARRAY`) and can be checked
+- This API depends on a build option (`JERRY_BUILTIN_TYPEDARRAY`) and can be checked
   in runtime with the `JERRY_FEATURE_TYPEDARRAY` feature enum value,
   see: [jerry_is_feature_enabled](#jerry_is_feature_enabled).
-- The ES2015-subset profile enables this by default.
+- The es.next profile enables this by default.
 
 **Prototype**
 
@@ -4841,10 +4841,10 @@ one of the allowed TypedArray functions.
 *Notes*:
 - Returned value must be freed with [jerry_release_value](#jerry_release_value)
   when it is no longer needed.
-- This API depends on a build option (`JERRY_ES2015_BUILTIN_TYPEDARRAY`) and can be checked
+- This API depends on a build option (`JERRY_BUILTIN_TYPEDARRAY`) and can be checked
   in runtime with the `JERRY_FEATURE_TYPEDARRAY` feature enum value,
   see: [jerry_is_feature_enabled](#jerry_is_feature_enabled).
-- The ES2015-subset profile enables this by default.
+- The es.next profile enables this by default.
 
 **Prototype**
 
@@ -4897,11 +4897,11 @@ Create a jerry_value_t representing a given type container object.
 - This method is expected to work the same way as the JavaScript Map constructor.
 - Returned value must be freed with [jerry_release_value](#jerry_release_value)
   when it is no longer needed.
-- This API depends on a build option (`JERRY_ES2015_BUILTIN_CONTAINER`) and can be checked
+- This API depends on a build option (`JERRY_BUILTIN_CONTAINER`) and can be checked
   in runtime with the `JERRY_FEATURE_MAP, JERRY_FEATURE_SET, JERRY_FEATURE_WEAKMAP, JERRY_FEATURE_WEAKSET`
   feature enum values.
   see: [jerry_is_feature_enabled](#jerry_is_feature_enabled).
-- The ES2015-subset profile enables this by default.
+- The es.next profile enables this by default.
 
 *New in version 2.3*.
 
@@ -5009,6 +5009,7 @@ jerry_has_property (const jerry_value_t obj_val,
   -  true/false API value  - depend on whether the property exists
 
 *Changed in version 2.0*: The return value type is now a JavaScript value and not a primitive boolean value.
+*Changed in version 2.3*: The return value can be an error value.
 
 **Example**
 
@@ -5068,6 +5069,7 @@ jerry_has_own_property (const jerry_value_t obj_val,
   -  true/false API value - depend on whether the property exists
 
 *Changed in version 2.0*: The return value type is now a JavaScript value and not a primitive boolean value.
+*Changed in version 2.3*: The return value can be an error value.
 
 **Example**
 
@@ -7934,10 +7936,10 @@ If used outside of a native C function it will return "undefined" value.
 *Notes*:
 - Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
 is no longer needed.
-- This feature depends on build option (`JERRY_ES2015`) and can be checked
-  in runtime with the `JERRY_FEATURE_SYMBOL` feature enum value (as symbols are enabled in case of ES2015),
+- This feature depends on build option (`JERRY_ESNEXT`) and can be checked
+  in runtime with the `JERRY_FEATURE_SYMBOL` feature enum value (as symbols are enabled in case of ES.next),
   see: [jerry_is_feature_enabled](#jerry_is_feature_enabled).
-- If the ES2015 mode is not enabled this method will always return the "undefined" value.
+- If the ES.next mode is not enabled this method will always return the "undefined" value.
 
 **Prototype**
 
@@ -8058,7 +8060,7 @@ main (int argc, char** argv)
 
 # ArrayBuffer and TypedArray functions
 
-These APIs all depend on the ES2015-subset profile.
+These APIs all depend on the es.next profile.
 
 ## jerry_get_arraybuffer_byte_length
 
