Documentation typo fixes
JerryScript-DCO-1.0-Signed-off-by: Csaba Osztrogonác oszi@inf.u-szeged.hu

--- a/docs/01.CONFIGURATION.md
+++ b/docs/01.CONFIGURATION.md
@@ -152,7 +152,7 @@ This feature is disabled by default.
 
 ### LCache
 
-This option enables the LCache, allowing faster access to object properties. The LCache usases a statically allocated hash-map, which increases memory consumption.
+This option enables the LCache, allowing faster access to object properties. The LCache uses a statically allocated hash-map, which increases memory consumption.
 See [Internals](04.INTERNALS.md#lcache) for further details.
 This option is enabled by default.
 
